[gd_scene load_steps=8 format=3 uid="uid://bmw4le2ggxppb"]

[ext_resource type="Script" path="res://TerrainGen.gd" id="1_6j301"]
[ext_resource type="Script" path="res://Player/player_select.gd" id="1_k0yjn"]
[ext_resource type="PackedScene" uid="uid://b854gcq3q7qme" path="res://assets/world/the_sprawl_terrain_packs.tscn" id="2_h6r2l"]
[ext_resource type="Texture2D" uid="uid://bd1dsmqbq3l7" path="res://assets/player/character/john/john_placeholder.png" id="3_curo1"]
[ext_resource type="Theme" uid="uid://bwayc6rbhtvxj" path="res://assets/ui/theme/HEALTH_theme.tres" id="3_qq4mx"]
[ext_resource type="Texture2D" uid="uid://onj3epyj7nej" path="res://assets/player/character/jake/jake.png" id="4_5cqqt"]
[ext_resource type="Texture2D" uid="uid://ddpdwpp0j560m" path="res://assets/player/character/beej/beej.png" id="5_1u1mo"]

[node name="PlayerSelect" type="Node2D"]
script = ExtResource("1_k0yjn")

[node name="Background" type="Sprite2D" parent="."]
visible = false
texture_filter = 2
texture_repeat = 2
region_enabled = true
region_rect = Rect2(-4000, -4000, 4000, 4000)

[node name="TerrainGenOrigin" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("1_6j301")
packedscene_terrain_horizontal = ExtResource("2_h6r2l")
player = NodePath("../DummyPlayer")
scroll_horizontal = true

[node name="DummyPlayer" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = 518.0
offset_top = 445.0
offset_right = 923.0
offset_bottom = 469.0
theme = ExtResource("3_qq4mx")
text = "WHO WILL FIGHT THE RATS TODAY?"

[node name="Jake" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="JakeSprite" type="Sprite2D" parent="Jake"]
unique_name_in_owner = true
z_index = 1
position = Vector2(568, 608)
scale = Vector2(3, 3)
texture = ExtResource("4_5cqqt")

[node name="Label" type="Label" parent="Jake"]
offset_left = 536.0
offset_top = 706.0
offset_right = 597.0
offset_bottom = 730.0
theme = ExtResource("3_qq4mx")
text = "JAKE"

[node name="Button" type="Button" parent="Jake"]
offset_left = 526.0
offset_top = 568.0
offset_right = 607.0
offset_bottom = 744.0

[node name="John" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="JohnSprite" type="Sprite2D" parent="John"]
unique_name_in_owner = true
z_index = 1
position = Vector2(722, 606)
scale = Vector2(3, 3)
texture = ExtResource("3_curo1")

[node name="Label" type="Label" parent="John"]
offset_left = 689.0
offset_top = 705.0
offset_right = 754.0
offset_bottom = 729.0
theme = ExtResource("3_qq4mx")
text = "JOHN"

[node name="Button" type="Button" parent="John"]
offset_left = 682.0
offset_top = 564.0
offset_right = 763.0
offset_bottom = 740.0

[node name="Beej" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="BeejSprite" type="Sprite2D" parent="Beej"]
unique_name_in_owner = true
z_index = 1
position = Vector2(891, 605)
scale = Vector2(3, 3)
texture = ExtResource("5_1u1mo")

[node name="Label" type="Label" parent="Beej"]
offset_left = 860.0
offset_top = 703.0
offset_right = 925.0
offset_bottom = 727.0
theme = ExtResource("3_qq4mx")
text = "BEEJ"

[node name="Button" type="Button" parent="Beej"]
offset_left = 850.0
offset_top = 561.0
offset_right = 931.0
offset_bottom = 737.0

[connection signal="pressed" from="Jake/Button" to="." method="_on_select_character" binds= ["jake"]]
[connection signal="pressed" from="John/Button" to="." method="_on_select_character" binds= ["john"]]
[connection signal="pressed" from="Beej/Button" to="." method="_on_select_character" binds= ["beej"]]
